Adicionando e-mail de contato

--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,7 @@
     <title>Contato</title>
 </head>
 <body>
- <H1>Contato</H1>   
+ <H1>Contato</H1>  
+ <p>Entre em contato pelo e-mail do usuário josemoura00 </p> 
 </body>
-</html>
+</html>s
